[components] Fix pane header z-index issue

--- a/packages/@sanity/components/src/panes/styles/DefaultPane.css
+++ b/packages/@sanity/components/src/panes/styles/DefaultPane.css
@@ -58,7 +58,7 @@
   top: 0;
   user-select: none;
   background-color: inherit;
-  z-index: 10;
+  z-index: 1;
 
   @nest .isCollapsed & {
     background-color: transparent;
